:bug: Fixed the issue that the gutters of attribute view overlapped with layout resize bar (#9772)

--- a/app/src/assets/scss/business/_av.scss
+++ b/app/src/assets/scss/business/_av.scss
@@ -63,11 +63,8 @@
 
   &__gutters {
     @extend .protyle-gutters;
-    position: fixed;
-    top: 0;
-    left: -44px;
-    opacity: 0;
-    display: flex;
+    display: none;
+    z-index: 2;
 
     svg {
       height: 25px;
@@ -108,7 +105,7 @@
       }
 
       .av__gutters {
-        opacity: 1;
+        display: flex;
       }
     }
 
